* Added logging in .NET.
* Added `addDefaultXModule` to `GraphSONMapper` as a shortcut for including a version matched GraphSON extension module.
* Modified `GraphSONRecordReader` and `GraphSONRecordWriter` to include the GraphSON extension module by default.
* Bumped `jackson-databind` to 2.14.0 to fix security vulnerability.
* Bumped to Groovy 2.5.19.
* Bumped to Netty 4.1.85.

==== Bugs

GENERATED AT RELEASE

==== Improvements

GENERATED AT RELEASE

[[release-3-5-4]]
=== TinkerPop 3.5.4 (Release Date: July 18, 2022)

* Added exception to Gremlin Server that is thrown when using a transaction on a non-transaction graph.
* Exposed error message sent by the server as a property on `GremlinServerError` for gremlin-python
* Allowed `datetime()` syntax to accept zone offset with colon separators and seconds.
* Fixed a minor problem in the Gremlin parser where a `GraphTraversalSource` may not have been initialized.
* Added getters to high and low properties in `RangeLocalStep`.
* Added `Pick` traversal to the return from `getGlobalChildren()` for `BranchStep`.
* Ensured `Pick` traversal was an integrated child.
* Added GraphBinary serialization support to gremlin-javascript.
* Improved startup time by removing unnecessary DNS lookup.
* Bumped to logback 1.2.9.
* Bumped to netty 4.1.77.
* Fixed bug in `submitAsync()` in gremlin-python where the deprecated version was not returning its result.
* Added missing `ResponseStatusCodeEnum` entries for 403, 429, 497, and 596 for .NET.
* Added GraphBinary support in gremlin-python for short, bigdecimal and biginteger.
* Fixed bug in `PartitionStrategy` where the use of `AbstractLambdaTraversal` caused an unexpected exception.
* Fixed bug where close requests for sessions were improperly validating the request in the `UnifiedChannelizer`.
* Deprecated and removed functionality of the `connectOnStartup` option in `gremlin-javascript` to resolve potential `unhandledRejection` and race conditions.