@@ -41,6 +41,7 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 * Bumped `jackson-databind` to 2.14.0 to fix security vulnerability.
 * Bumped to Groovy 2.5.19.
 * Bumped to Netty 4.1.85.
+* Added user agent to web socket handshake in go driver. Can be controlled by a new `EnableUserAgentOnConnect` setting. It is enabled by default.
 
 ==== Bugs
 
